# Hecate-by-chof64

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  DEVELOPMENT.md  Dockerfile  README.md  changelog.md  docker-compose.dev.yml  docker-compose.yml  env.example  example.env  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: pylint.yml  super-linter.yml
cogs/catascroll/: engine.py
components/embeds/: __init__.py  base.py
core/cogs/: extensions.py  status.py
core/error/: __init__.py  handler.py
core/error/loggers/: __init__.py  critical.py  uncaught.py
src/: main.py
src/cogs/catascroll/: engine.py  engine_temp.py  mastersheet.py
src/cogs/core/: ping.py  template.py  tester.py
src/cogs/mastersheet/: engine.py
src/components/responses/: __init__.py  error.py  generic.py
src/data/cogs/: mastersheet.json
src/helpers/catascroll/: engine_temp.py
src/helpers/database/: __init__.py  adapter.py
