[tool.poetry]
name = "Hecate-by-chof64"
version = "0.0.0"
description = "A discord bot for Politics and War."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
"discord.py" = "^1.7.3"
pylint = "^2.13.7"
python-dotenv = "^0.20.0"
motor = {extras = ["srv"], version = "^3.0.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
